# PooUja-Pr-cticas

./: README.md
Practica10Casa/: Bloque.cpp  Bloque.h  CMakeLists.txt  Cofre.cpp  Cofre.h  Contenedor.h  ContenedorItem.cpp  ContenedorItem.h  Espada.cpp  Espada.h  Filete.cpp  Filete.h  Inventario.cpp  Inventario.h  ItemApilable.cpp  ItemApilable.h  main.cpp
Practica1Casa/: CMakeLists.txt  Vehiculo.cpp  Vehiculo.h  main.cpp
Practica2Casa/: CMakeLists.txt  Fecha.cpp  Fecha.h  Temazo.cpp  Temazo.h  djutils.cpp  djutils.h  main.cpp
Practica3Casa/: Fecha.h  Temazo.cpp  Temazo.h  djutils.cpp  djutils.h  main.cpp
Practica3Clase/: CMakeLists.txt  Fecha.cpp  Garito.cpp  Garito.h  Temazo.cpp  Temazo.h  djutils.cpp  djutils.h  main.cpp
Practica4Casa/: CMakeLists.txt  Fecha.cpp  Fecha.h  Garito.cpp  Garito.h  ParametroNoValido.cpp  ParametroNoValido.h  Temazo.cpp  Temazo.h  main.cpp
Practica4Clase/: Fecha.cpp  Fecha.h  Garito.cpp  ParametroNoValido.cpp  ParametroNoValido.h  Temazo.cpp  Temazo.h  djutils.cpp  main.cpp
Practica5Casa/: Droide.cpp  Droide.h  Informe.cpp  Piloto.cpp  StarFighter.cpp  main.cpp
Practica5Clase/: Droide.cpp  Droide.h  Informe.h  Piloto.cpp  Piloto.h  StarFighter.h  main.cpp
Practica6Casa/: Escuadron.cpp  Escuadron.h  Pieza.cpp  StarFighter.cpp  main.cpp
Practica6Clase/: CMakeLists.txt  Escuadron.cpp  (+7 more)
Practica9Clase/: Bloque.cpp  Bloque.h  BolaDeNieve.cpp  BolaDeNieve.h  CMakeLists.txt  Espada.cpp  Espada.h  Filete.h  Item.cpp  ItemAgotado.h  ItemApilable.cpp  ItemApilableArrojable.cpp  ItemApilableArrojable.h  ItemArrojable.h  main.cpp
(+65 files in other folders)
